--- a/week 4/Quiz 3.ipynb
+++ b/week 4/Quiz 3.ipynb
@@ -31,8 +31,8 @@
     "# Create a new dataframe that takes the original dataset and groups the data by neighborhood and finds the average price, total number of reviews, and max availability_365.\n",
     "groupdf =belize_df.groupby('neighbourhood')\n",
     "x= groupdf[[\"price\"].mean()\n",
-    "y= groupdf[\"number_of_reviews\"].sum()\n",
-    "b= groupdf[\"availability_365\"].max()\n",
+    "y= groupdf[[\"number_of_reviews\"]].sum()\n",
+    "b= groupdf[[\"availability_365\"]].max()\n",
     "\n",
     "leftmerge_df = pd.merge(x,y, on=\"neighbourhood\")\n",
     "innermerge_df = pd.merge(leftmerge_df,b, on=\"neighbourhood\")\n",
