--- a/week 4/Quiz 3.ipynb
+++ b/week 4/Quiz 3.ipynb
@@ -30,7 +30,7 @@
     "belize_df.describe()\n",
     "# Create a new dataframe that takes the original dataset and groups the data by neighborhood and finds the average price, total number of reviews, and max availability_365.\n",
     "groupdf =belize_df.groupby('neighbourhood')\n",
-    "x= groupdf[[\"price\"].mean()\n",
+    "x= groupdf[[\"price\"]].mean()\n",
     "y= groupdf[[\"number_of_reviews\"]].sum()\n",
     "b= groupdf[[\"availability_365\"]].max()\n",
     "\n",
