--- a/week 4/Quiz 3.ipynb
+++ b/week 4/Quiz 3.ipynb
@@ -33,10 +33,10 @@
     "x= groupdf[[\"price\"]].mean()\n",
     "y= groupdf[[\"number_of_reviews\"]].sum()\n",
     "b= groupdf[[\"availability_365\"]].max()\n",
-    "\n",
+    
     "leftmerge_df = pd.merge(x,y, on=\"neighbourhood\")\n",
     "innermerge_df = pd.merge(leftmerge_df,b, on=\"neighbourhood\")\n",
-    "print(innermerge_df)\n"
+    "innermerge_df\n"
    ]
   },
   {
