--- a/HW 9.ipynb
+++ b/HW 9.ipynb
@@ -289,7 +289,8 @@
     "#The false Positive rates were fairly close to 0. and became 1 towards the end meaning that the more it ran the more inaccurate the data was\n",
     "#The True positive rates have less 1 values meaning that true positives were fairly accurate. The Thresholds is entirely dependent on the accuracy\n",
     "# of the tpr and fpr and as a result is fairly good.  \n",
-    "scores = model.predict_proba(X_test)[:, 1]  \n",
+    " heart_disease = pd.Heart_disease9{[true_label': [1,0,1,0,1],'predicted_probability':[0.8,0.3,0.6,0.2,0.7]})
+    "scores = heart_disease['predicted_probability] \n",
     "fpr, tpr, thresholds = roc_curve(y_test, scores, pos_label=1)  \n",
     "roc_auc = auc(fpr, tpr) \n",
     "print(\"False Positive Rate:\", fpr)\n",
