--- a/5.ipynb
+++ b/5.ipynb
@@ -32,7 +32,11 @@
     "What models do you plan to apply to your data first? \n",
     "(there are non NaN)\n",
     "We plan to use the pd.git dummy to convert out categorical to numerical and assign it to score. Then we are going to process the dataset so all continous values above normal distribution result in a 2 and all normal values result in a 1. Then we are going to have a cumulative column to add up all values and count that as a score and then we will asign scores to cancerous and noncancerous. \n",
-    "Then we can put this in a column graph and we can test our model using the confusion matrix and get precision and accuracy values and compare it to the depiction on the website about accuracy and precision. \n"
+    "Then we can put this in a column graph and we can test our model using the confusion matrix and get precision and accuracy values and compare it to the depiction on the website about accuracy and precision. \n" 
+    "We plan on using KNN neighbors, Random Forest, Support Vector Machines, and Logistic Regression \n"
+
+   ]
+  }
    ]
   }
  ],
