--- a/week1/HW12.ipynb
+++ b/week1/HW12.ipynb
@@ -220,7 +220,7 @@
     "For Most Positive, use sorted by pos scores (highest to lowest), disregarding sentences with zero positivity\n",
     "For Most Negative, use sorted by neg scores (highest to lowest)\n",
     "With this correction, \"TERRIBLE\" will only show up in the Most Negative Sentences category as it should.\n",
-    "Only reason I am not is because every time I try to it the kernel colapses. \n"
+    "Only reason I am not is because every time I try to it the kernel collapses. \n"
    ]
   }
  ],
